--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,22 +5,27 @@
 }
 
 :root{
-        --yellow: #FFF5D8;
+        /* Grønne toner */
+        --deepGreen: #54845E;
+        --midtGreen: #82B28C;
         --lightGreen: #E4FAEE;
-        --ligtRed: #FDEFEF;
-        --lightBlue: #E5F0FF;
-        --buttonYellow: #E3C15C;
-        --buttonGreen: #C0E8C8;
-        --bTextGreen:#54845E;
-        --headerColor: #FFF;
-        --textColor: #000;
-        --textGrey: #9D9EA3;
-        --textRed: #F18C8E;
-        --textBlue: #305F72;
+        /* Blå toner */
+        --deepBlue: #305F72;
+        --midtBlue: #66BADD;
+        --lightBlue: #E4F7FA;
+        /* Gule toner */
+        --deepYellow: #E3C15C;
+        --midtYellow: #FFF5D8;
+        --lightYellow: #FFF5E5;
+        /* Andre farver */
+        --white: #FFF;
 }
 
+
+/* Landingpage */
+
 .landingBackground{
-    background-color: var(--bTextGreen);
+    background-color: var(--deepGreen);
     border-radius: 0 0 35px 35px;
     height: 260px;
 }
@@ -41,10 +46,8 @@
     z-index:2
 }
 
-
-
 .landingBox {
-    background-color: var(--yellow);
+    background-color: var(--lightYellow);
     margin: 10px;
     padding: 30px 10px;
     border-radius: 20px;
@@ -52,11 +55,11 @@
 }
 .boxText{
     text-align: center;
-    color: var(--textBlue);
+    color: var(--deepBlue);
 }
 .btn {
     display: flex;
-    background-color: var(--buttonYellow);
+    background-color: var(--deepYellow);
     padding: 10px;
     border: none;
     border-radius: 15px;
@@ -69,15 +72,15 @@
     justify-content: space-between;
 }
 .btnText {
-    color: var(--headerColor);
+    color: var(--white);
     font-weight: 600;
 }
 .loginArrow{
-    color: var(--headerColor);
+    color: var(--white);
     
 }
 .landingText{
-    color: var(--textGrey);
+    color: var(--deepBlue);
     text-align: center;
     font-size: 12px;
     margin: 40px 20px;
@@ -86,7 +89,7 @@
 
 
 
-
+/* Menu */
 header {
     display: flex;
     justify-content: space-between;
@@ -102,7 +105,7 @@ header {
     flex-direction: column;
     justify-content: space-between;
     height: 20px;
-    background-color: var(--bTextGreen);
+    background-color: var(--deepGreen);
     padding: 10px;
     border-radius: 15px;
   }
@@ -120,7 +123,7 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--bTextGreen);
+    background-color: var(--deepGreen);
     z-index: 1;
     transition: all 0.2s ease;
   }
@@ -137,7 +140,7 @@ header {
   }
   
   .back-btn {
-    background-color: var(--buttonGreen);
+    background-color: var(--midtGreen);
     padding: 10px;
     border-radius: 15px;
   }
@@ -188,7 +191,7 @@ header {
 
   .menu li.active {
     font-weight: 600;
-    background-color: var(--buttonGreen);
+    background-color: var(--midtGreen);
     padding: 10px;
     width: 150px;
     border-radius: 15px;
