--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -7,15 +7,15 @@
 :root{
         /* Grønne toner */
         --deepGreen: #54845E;
-        --midtGreen: #82B28C;
+        --midGreen: #82B28C;
         --lightGreen: #E4FAEE;
         /* Blå toner */
         --deepBlue: #305F72;
-        --midtBlue: #66BADD;
+        --midBlue: #66BADD;
         --lightBlue: #E4F7FA;
         /* Gule toner */
         --deepYellow: #E3C15C;
-        --midtYellow: #FFF5D8;
+        --midYellow: #FFF5D8;
         --lightYellow: #FFF5E5;
         /* Andre farver */
         --white: #FFF;
@@ -77,7 +77,7 @@
 }
 .loginArrow{
     color: var(--white);
-    
+
 }
 .landingText{
     color: var(--deepBlue);
@@ -99,7 +99,7 @@ header {
     color: #fff;
     float: right;
   }
-  
+
   .burger-icon {
     display: flex;
     flex-direction: column;
@@ -109,14 +109,14 @@ header {
     padding: 10px;
     border-radius: 15px;
   }
-  
+
   .bar {
     width: 20px;
     height: 2px;
     background-color: #fff;
     transition: all 0.2s ease;
   }
-  
+
   .menu {
     position: absolute;
     top: -100%;
@@ -127,37 +127,37 @@ header {
     z-index: 1;
     transition: all 0.2s ease;
   }
-  
+
   .menu.show {
     top: 0;
   }
-  
+
   .menu-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
   }
-  
+
   .back-btn {
     background-color: var(--midtGreen);
     padding: 10px;
     border-radius: 15px;
   }
-  
+
   .menu-title {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
     flex-grow: 1;
   }
-  
+
   .menu ul {
     list-style: none;
     padding: 0;
     margin: 0;
   }
-  
+
   .menu li {
     display: flex;
     padding: 10px;
@@ -165,7 +165,7 @@ header {
     justify-content: center;
     margin-top: 20px;
   }
-  
+
   .menu a {
     color: #fff;
     text-decoration: none;
