--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -25,9 +25,11 @@
 /* Landingpage */
 
 .landingBackground{
-    background-color: var(--deepGreen);
+    /* background-color: var(--deepGreen); */
     border-radius: 0 0 35px 35px;
     height: 260px;
+    background-image: url("img/background.png");
+    overflow: hidden;
 }
 
 .logo{
