--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -166,7 +166,7 @@ header {
   }
 
   .back-btn {
-    background-color: var(--midtGreen);
+    background-color: var(--midGreen);
     padding: 10px;
     border-radius: 15px;
   }
@@ -217,12 +217,50 @@ header {
 
   .menu li.active {
     font-weight: 600;
-    background-color: var(--midtGreen);
+    background-color: var(--midGreen);
     padding: 10px;
-    width: 150px;
+    margin: 0px 40px;
     border-radius: 15px;
+    margin-top: 20px;
   }
 
   .profileName{
+    font-weight: 600;
+  }
+
+
+  /* Index page */
+  .btnIndex{
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .rewardBox{
+      margin: 10px;
+      padding: 30px 10px;
+      border-radius: 20px;
+      margin: 20px 20px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+  }
+  .color1{
+    background-color: var(--lightGreen);
+  }
+  .color2{
+    background-color: var(--lightBlue);
+  }
+  .color3{
+    background-color: var(--lightYellow);
+  }
+
+  .fa-circle-play{
+    font-size: 30px;
+    color: var(--deepGreen);
+  }
+
+  .activeText{
     font-weight: 600;
   }
