--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -48,7 +48,7 @@ p {
     height: 260px;
 }
 .backgroundWhite{
-  background-image: url("../img/background_white.png");
+  background-image: url("img/background_white.png");
   height:100%;
   background-position: center;
   background-repeat: no-repeat;
