--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -41,18 +41,21 @@ p {
 
 /* Landingpage */
 
-.landingBackground{
-    background-image: url("../img/background.png");
+.background{
+    background-image: url("../img/Bubbles.png");
+    background-color: var(--deepGreen);
     background-position: center;
     border-radius: 0 0 35px 35px;
     height: 260px;
+    z-index: -10;
 }
-.backgroundWhite{
-  background-image: url("img/background_white.png");
-  height:100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.whiteBackground{
+  background-color: var(--white);
+  border-radius: 35px 35px 0 0;
+  position: absolute;
+  height: 100%;
+  margin: -20% 0 0 0;
+  z-index: -1;
 }
 
 .logo{
