--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -9,11 +9,11 @@ h1{
 }
 h2{
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
 }
 h3{
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
 }
 p {
   font-size: 14px;
@@ -236,19 +236,19 @@ header {
   /* Index page */
   .btnIndex{
     display: flex;
-    margin: auto;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px !important;
   }
 
   .rewardBox{
-      margin: 10px;
-      padding: 30px 10px;
-      border-radius: 20px;
-      margin: 20px 20px;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
+    margin: 10px;
+    padding: 30px 10px;
+    border-radius: 20px;
+    margin: 20px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   .color1{
     background-color: var(--lightGreen);
@@ -267,4 +267,16 @@ header {
 
   .activeText{
     font-weight: 600;
+  }
+
+  .underOverskrift {
+    margin: 20px;
+  }
+
+  .rewardGrid2 {
+    display: flex;
+  }
+
+  .procenter {
+    margin: 10px;
   }
