--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -6,10 +6,13 @@
 h1{
   font-size: 34px;
   font-weight: 700;
+  text-align: center;
+  display: inline-block;
 }
 h2{
   font-size: 20px;
   font-weight: 600;
+  text-align: center;
 }
 h3{
   font-size: 14px;
@@ -49,11 +52,7 @@ p {
     height: 260px;
     z-index: -10;
 }
-.overskriftCentreret{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 .whiteBackground{
   background-color: var(--white);
   border-radius: 35px 35px 0 0;
@@ -130,7 +129,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: transparent;
-    padding: 20px;
+    padding: 20px 20px 0 0;
     color: #fff;
     float: right;
   }
