--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,10 +5,11 @@
 }
 h1{
   font-size: 34px;
-  font-weight: 700;
+  font-weight: 900;
   text-align: center;
   display: inline-block;
-  color: var(--deepBlue);
+  color: var(--white);
+  padding: 0 20px 0 20px;
 }
 h2{
   font-size: 20px;
@@ -23,7 +24,7 @@ h3{
 }
 p {
   font-size: 14px;
-  font-weight: 200;
+  font-weight: 300;
   color: var(--deepBlue);
 }
 
@@ -291,3 +292,79 @@ header {
   .procenter {
     margin: 10px;
   }
+
+
+
+/* FAQ */
+
+.faq-heading {
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 19px;
+   -webkit-transition: text-indent 0.2s;
+  text-indent: 20px;
+  color: #333;
+}
+
+.faq-text {
+  color: var(--deepBlue);
+  width:85%;
+  padding-left:20px;
+  margin-bottom:30px;
+}
+
+.faq {
+  width: 100%;
+  margin: 40px auto;
+  background: white;
+  border-radius: 4px;
+  position: relative;
+  border: 1px solid #E1E1E1;
+}
+.faq label {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  height: 56px;
+  padding-top:1px;
+
+  background-color: #FAFAFA;
+  border-bottom: 1px solid #E1E1E1;
+}
+
+.faq input[type="checkbox"] {
+  display: none;
+}
+
+
+ .faq input[type="checkbox"]:checked + label > .faq-arrow {
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
+}
+ .faq input[type="checkbox"]:checked + label {
+  display: block;
+  background: rgba(255,255,255,255) !important;
+  color: #4f7351;
+  height: 120px;
+  transition: height 0.8s;
+  -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+ .faq input[type='checkbox']:not(:checked) + label {
+  display: block;
+  transition: height 0.8s;
+  height: 60px;
+  -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+
+/* FOOTER */
+footer {
+  height: 25px;
+}
