--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -299,56 +299,54 @@ header {
 /* FAQ */
 
 .faq-heading {
-  font-family: Lato;
-  font-weight: 400;
-  font-size: 19px;
-   -webkit-transition: text-indent 0.2s;
-  text-indent: 20px;
-  color: #333;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--deepBlue);
+  padding: 10px 10px 0 10px !important;
 }
 
 .faq-text {
   color: var(--deepBlue);
   width:85%;
-  padding-left:20px;
+  padding-left:10px;
   margin-bottom:30px;
+  opacity: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.read-more{
+  display: none;
 }
 
+.faq input[type="checkbox"]:checked + .faq-text{
+  color: var(--deepBlue);
+  width:85%;
+  padding-left:10px;
+  margin-bottom:30px;
+}
 .faq {
   width: 100%;
   margin: 40px auto;
-  background: white;
-  border-radius: 4px;
   position: relative;
-  border: 1px solid #E1E1E1;
 }
 .faq label {
   display: block;
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  height: 56px;
-  padding-top:1px;
-
-  background-color: #FAFAFA;
+  height: 50px;
   border-bottom: 1px solid #E1E1E1;
+  max-width: 95%;
+  margin: 0 auto 0 auto;
 }
 
 .faq input[type="checkbox"] {
   display: none;
 }
 
-
- .faq input[type="checkbox"]:checked + label > .faq-arrow {
-  transition: -webkit-transform 0.8s;
-  transition: transform 0.8s;
-  transition: transform 0.8s, -webkit-transform 0.8s;
-}
  .faq input[type="checkbox"]:checked + label {
   display: block;
-  background: rgba(255,255,255,255) !important;
-  color: #4f7351;
-  height: 120px;
+  height: 135px;
   transition: height 0.8s;
   -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
@@ -359,10 +357,22 @@ header {
   height: 60px;
   -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
+.faq input[type='checkbox']:not(:checked) .faq-text {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 
 ::-webkit-scrollbar {
   display: none;
 }
+.faq p a {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--deepGreen) !important;
+}
+
 /* Belønninger */
 .fa-circle-check, .fa-circle{
   font-size: 30px;
