--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -325,16 +325,17 @@ header {
   width:85%;
   padding-left:10px;
   margin-bottom:40px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .read-more{
   display: none;
 }
 
-.faq input[type="checkbox"]:checked + .faq-text{
+.faq input[type="checkbox"]:checked + label .faq-text{
   color: var(--deepBlue);
-  width:85%;
-  padding-left:10px;
-  margin-bottom:30px;
+  white-space: unset;
 }
 .faq {
   width: 100%;
@@ -453,24 +454,24 @@ footer {
 /* The Modal (background) */
 .modal {
   display: none;
-  position: fixed; 
-  z-index: 1; 
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0); 
+  background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 20% auto; 
+  margin: 20% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; 
+  width: 80%;
   border-radius: 20px;
 }
 
