--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -414,6 +414,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border: none;
+  width: 90%;
 }
 
 .rewardText {
@@ -502,29 +504,7 @@ hr {
 
 
 
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-}
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 20% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  border-radius: 20px;
-}
 
 .modal-icons {
   display: flex;
@@ -564,31 +544,88 @@ hr {
   color: var(--deepGreen);
 }
 
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
 
 
 
 
-
-#qrCodeContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px auto;
+.qrCode {
   width: 200px;
+  display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
+
+/* Modal styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: transparent;
+  margin: 15% auto;
+  padding: 20px;
+  width: 80%;
+  max-width: 500px;
+  animation: modalfade 0.3s;
+}
+
+@keyframes modalfade {
+  from {
+    opacity: 0;
+  }
+  
+  to {
+    opacity: 1;
+  }
+}
+
+/* Card styles */
+.card {
   height: 200px;
-  border: 1px solid black;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+
+.card-flipped {
+  transform: rotateY(180deg);
+}
+
+.card-face {
+  position: absolute;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  background-color: var(--white);
+  display: inline-table;
+  color: #333;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.card-back {
+  background-color: var(--white);
+  display: inline-table;
+  color: var(--deepBlue);
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 20px;
+  padding: 20px;
+  transform: rotateY(180deg);
 }
