--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -117,7 +117,7 @@ h4{
 
 /* Landingpage */
 #landingBack{
-  margin-bottom: 50px;
+  margin-bottom: 18vh;
 }
 .background{
     background-image: url("../img/Bubbles.png");
@@ -154,7 +154,8 @@ h4{
     margin-left: auto;
     margin-right: auto;
     padding-top: 10px;
-    z-index: 2;
+    position: relative;
+    z-index: 5;
 }
 
 .landingBox {
