--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -132,7 +132,7 @@ h4{
   background-color: var(--white);
   border-radius: 35px 35px 0 0;
   position: absolute;
-  height: 100%;
+  max-height: 100%;
   margin: -20% 0 0 0;
   width: 100%;
 }
